flags and horizontal scroll bugs fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ a.text-warning:hover {
 }
 
 
+.img-slider {
+    overflow: hidden;
+}
+
 .logo {
     width: 130px;
 }
